cs2/172.16.10.1-iptables.txt
172.16.10.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Fri Oct 23 17:28:07 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [28721:2107007]
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -i ens224 -o ens192 -j ACCEPT
-A FORWARD -i ens192 -o ens224 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Fri Oct 23 17:28:07 2020
# Generated by iptables-save v1.8.4 on Fri Oct 23 17:28:07 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o ens192 -j MASQUERADE
COMMIT
# Completed on Fri Oct 23 17:28:07 2020
