cs2/172.16.13.1-iptables.txt
172.16.13.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Sun Dec  6 02:53:00 2020
*raw
:PREROUTING ACCEPT [1765:222999]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Sun Dec  6 02:53:00 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 02:53:00 2020
*mangle
:PREROUTING ACCEPT [1765:222999]
:INPUT ACCEPT [339:104439]
:FORWARD ACCEPT [1426:118560]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [1000:93000]
-A PREROUTING -m conntrack --ctstate INVALID -j DROP
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A PREROUTING -p tcp -m conntrack --ctstate NEW -m tcpmss ! --mss 536:65535 -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A PREROUTING -s 192.168.13.0/24 -i ens192 -j DROP
COMMIT
# Completed on Sun Dec  6 02:53:00 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 02:53:00 2020
*nat
:PREROUTING ACCEPT [1259:161121]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [494:31122]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Sun Dec  6 02:53:00 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 02:53:00 2020
*filter
:INPUT DROP [339:104439]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -d 192.168.13.3/32 -p tcp -m tcp --dport 22 -m limit --limit 1/sec --limit-burst 100 -j ACCEPT
-A FORWARD -d 192.168.13.2/32 -p tcp -m tcp --dport 22 -m limit --limit 1/sec --limit-burst 100 -j ACCEPT
-A FORWARD -d 192.168.13.2/32 -p udp -m udp --dport 53 -m limit --limit 1/sec --limit-burst 500 -j ACCEPT
-A FORWARD -d 192.168.13.3/32 -p tcp -m tcp --dport 25 -m limit --limit 1/sec --limit-burst 500 -j ACCEPT
-A FORWARD -d 192.168.13.2/32 -p udp --dport 53 -j DROP
-A FORWARD -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j LOG --log-prefix "SSH Connection: "
-A FORWARD -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j DROP
-A FORWARD -s 172.16.0.0/16 -d 172.16.0.0/16 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -d 192.168.0.0/24 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -d 172.16.0.0/16 -j ACCEPT
-A FORWARD -s 172.16.0.0/16 -d 192.168.0.0/24 -j ACCEPT
-A FORWARD -i ens192 -o ens224 -j ACCEPT
-A FORWARD -i ens224 -o ens192 -j ACCEPT
-A OUTPUT -m state --state NEW,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sun Dec  6 02:53:00 2020
