cs2/172.16.18.1-iptables.txt
172.16.18.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Sun Dec  6 21:40:40 2020
*filter
:INPUT ACCEPT [124429:44954146]
:FORWARD ACCEPT [54:8022]
:OUTPUT ACCEPT [474584:70645926]
:LOGGING - [0:0]
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.16.0.1/32 -d 192.168.18.2/32 -p icmp -j ACCEPT
-A FORWARD -s 172.16.0.1/32 -d 192.168.18.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.16.0.1/32 -d 192.168.18.3/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.1.1/32 -d 192.168.18.2/32 -p udp -m udp --dport 53 -j DROP
-A FORWARD -s 172.16.0.1/32 -d 192.168.18.2/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -d 192.168.18.2/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD ! -s 172.16.0.25/32 -d 192.168.18.3/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -s 192.168.18.3/32 -d 192.168.1.4/32 -p udp -m udp --dport 53 -j DROP
-A FORWARD -d 192.168.18.2/32 -p udp -m udp --dport 53 -m limit --limit 20/min --limit-burst 4 -j SET --add-set dosListForCNS src
-A FORWARD -d 192.168.18.2/32 -p udp -m udp --dport 53 -m set ! --match-set dosListForCNS src -j ACCEPT
-A FORWARD -d 192.168.18.2/32 -p udp -m udp --dport 53 -m set --match-set dosListForCNS src -j LOGGING
-A FORWARD -d 192.168.18.3/32 -p tcp -m tcp --dport 25 -m limit --limit 20/min --limit-burst 4 -j SET --add-set dosListForES src
-A FORWARD -d 192.168.18.3/32 -p tcp -m tcp --dport 25 -m set ! --match-set dosListForES src -j ACCEPT
-A FORWARD -d 192.168.18.3/32 -p tcp -m tcp --dport 25 -m set --match-set dosListForES src -j LOGGING
-A FORWARD -j LOGGING
-A LOGGING -d 192.168.18.2/32 -p udp -m udp --dport 53 -m set --match-set dosListForCNS src -j LOG --log-prefix "CNS-DOS/DDOS Attempt"
-A LOGGING -d 192.168.18.2/32 -p udp -m udp --dport 53 -m set --match-set dosListForCNS src -j DROP
-A LOGGING -d 192.168.18.3/32 -p tcp -m tcp --dport 25 -m set --match-set dosListForES src -j LOG --log-prefix "ES-DOS/DDOS Attempt"
-A LOGGING -d 192.168.18.3/32 -p tcp -m tcp --dport 25 -m set --match-set dosListForES src -j DROP
-A LOGGING -j LOG --log-prefix "Illegitimate Network Traffic"
-A LOGGING -j DROP
COMMIT
# Completed on Sun Dec  6 21:40:40 2020
