cs2/172.16.20.1-iptables.txt
172.16.20.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:54:12 2020
*raw
:PREROUTING ACCEPT [115674:32034911]
:OUTPUT ACCEPT [7865:1390513]
COMMIT
# Completed on Sun Dec  6 23:54:12 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:54:12 2020
*mangle
:PREROUTING ACCEPT [100748:30623457]
:POSTROUTING ACCEPT [9907:1539772]
:INPUT ACCEPT [111292:31405479]
:FORWARD ACCEPT [2152:157734]
:OUTPUT ACCEPT [7865:1390513]
-A PREROUTING -m conntrack --ctstate INVALID -j DROP
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A PREROUTING -s 172.16.0.1/32 -j ACCEPT
-A PREROUTING -i ens192 -j LOG --log-prefix "Prerouting Deny: "
-A PREROUTING -i ens192 -j DROP
COMMIT
# Completed on Sun Dec  6 23:54:12 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:54:12 2020
*filter
:INPUT ACCEPT [109868:31275097]
:FORWARD ACCEPT [195:12770]
:OUTPUT ACCEPT [7803:1384857]
:LOGGING - [0:0]
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m connlimit --connlimit-above 10 --connlimit-mask 32 --connlimit-saddr -j LOG --log-prefix "More conn: "
-A FORWARD -m connlimit --connlimit-above 10 --connlimit-mask 32 --connlimit-saddr -j DROP
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -j LOG --log-prefix "Forward Deny: "
-A FORWARD -j DROP
COMMIT
# Completed on Sun Dec  6 23:54:12 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:54:12 2020
*nat
:PREROUTING ACCEPT [322:24775]
:INPUT ACCEPT [18:2685]
:POSTROUTING ACCEPT [899:190563]
:OUTPUT ACCEPT [692:175588]
COMMIT
# Completed on Sun Dec  6 23:54:12 2020
