cs2/172.16.21.1-iptables.txt
172.16.21.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:52:45 2020
*raw
:PREROUTING ACCEPT [2499495:1148519058]
:OUTPUT ACCEPT [174263:754294547]
COMMIT
# Completed on Sun Dec  6 23:52:45 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:52:45 2020
*mangle
:PREROUTING ACCEPT [2499489:1148518701]
:INPUT ACCEPT [2492387:1147882974]
:FORWARD ACCEPT [6405:560546]
:OUTPUT ACCEPT [174263:754294547]
:POSTROUTING ACCEPT [175584:754253288]
-A PREROUTING -m conntrack --ctstate INVALID -j DROP
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
COMMIT
# Completed on Sun Dec  6 23:52:45 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:52:45 2020
*nat
:PREROUTING ACCEPT [90562:27059016]
:INPUT ACCEPT [108:9528]
:POSTROUTING ACCEPT [16594:1268475]
:OUTPUT ACCEPT [18959:1719798]
COMMIT
# Completed on Sun Dec  6 23:52:45 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:52:45 2020
*filter
:INPUT DROP [1300209:565634544]
:FORWARD DROP [1660:178221]
:OUTPUT ACCEPT [167206:753476165]
-A INPUT -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.0.0/16 -i ens192 -j LOG --log-prefix "SPOOFED PKT "
-A INPUT -s 192.168.0.0/16 -i ens192 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 30/min -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/min --limit-burst 2 -j LOG
-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG --log-prefix "SSH connection"
-A INPUT -p tcp -m tcp --dport 22 -m set --match-set ssh_hosts src -j ACCEPT
-A INPUT -m limit --limit 12/min -j LOG --log-prefix "IP INPUT drop: "
-A INPUT -j DROP
-A FORWARD -s 192.168.21.0/24 -i ens192 -j LOG --log-prefix "SPOOFED PKT "
-A FORWARD -s 192.168.21.0/24 -i ens192 -j DROP
-A FORWARD -s 192.168.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 192.168.0.0/16 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -s 172.16.0.1/32 -d 192.168.21.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.21.0/24 -d 172.16.0.1/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 80 -m limit --limit 100/min -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 80 -m limit --limit 1/min --limit-burst 2 -j LOG
-A FORWARD -p tcp -m tcp --sport 80 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 25 -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 8 -m limit --limit 30/min -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 0 -m limit --limit 30/min -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 8 -m limit --limit 1/min --limit-burst 2 -j LOG
-A FORWARD -p icmp -m icmp --icmp-type 8 -j DROP
-A FORWARD -m limit --limit 12/min -j LOG --log-prefix "IP FORWARD drop: "
-A FORWARD -j DROP
-A OUTPUT -m state --state INVALID -j DROP
COMMIT
# Completed on Sun Dec  6 23:52:45 2020
