cs2/172.16.24.1-iptables.txt
172.16.24.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:35:01 2020
*raw
:PREROUTING ACCEPT [93401:35723658]
:OUTPUT ACCEPT [4923:456152]
COMMIT
# Completed on Sun Dec  6 23:35:01 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:35:01 2020
*mangle
:PREROUTING ACCEPT [93401:35723658]
:INPUT ACCEPT [90442:35499082]
:FORWARD ACCEPT [2955:223264]
:OUTPUT ACCEPT [4923:456152]
:POSTROUTING ACCEPT [7878:679416]
COMMIT
# Completed on Sun Dec  6 23:35:01 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:35:01 2020
*nat
:PREROUTING ACCEPT [83160:25471680]
:INPUT ACCEPT [6:384]
:POSTROUTING ACCEPT [698:50271]
:OUTPUT ACCEPT [133:9049]
COMMIT
# Completed on Sun Dec  6 23:35:01 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 23:35:01 2020
*filter
:INPUT ACCEPT [69:18650]
:FORWARD ACCEPT [2584:195840]
:OUTPUT ACCEPT [4923:456152]
:LOGGING - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.102.0.0/16 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.24.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.24.0/24 -p icmp -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p icmp -j ACCEPT
-A INPUT -s 192.168.24.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.24.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 192.168.24.0/24 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j LOG
-A INPUT -s 192.168.24.0/24 -p icmp -m limit --limit 2/min -j ACCEPT
-A INPUT -j LOG --log-prefix "Deny:"
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i ens192 -o ens224 -j ACCEPT
-A LOGGING -p tcp -m tcp --dport 22 -j ACCEPT
-A LOGGING -j ACCEPT
COMMIT
# Completed on Sun Dec  6 23:35:01 2020
