cs2/172.16.26.1-iptables.txt
172.16.26.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Wed Dec  2 15:05:40 2020
*filter
:INPUT ACCEPT [57778:35250605]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1630:145383]
-A FORWARD -p tcp -m tcp --dport 22 -m set --match-set ssh-cs2 src,dst -j ACCEPT
-A FORWARD -s 192.168.26.4/32 -d 172.16.0.1/32 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.26.4/32 -d 192.168.26.36/32 -p tcp -m tcp --dport 22 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.26.36/32 -d 192.168.26.4/32 -p tcp -m tcp --dport 22 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.26.4/32 -d 172.16.0.1/32 -p udp -m udp --dport 53 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.26.3/32 -d 192.168.1.4/32 -p tcp -m tcp --dport 25 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.26.3/32 -d 192.168.1.4/32 -p udp -m udp --dport 53 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 192.168.26.3/32 -p tcp -m tcp --dport 25 -m limit --limit 50/min -j SET --add-set anti-ddos-email src
-A FORWARD -d 192.168.26.3/32 -p tcp -m tcp --dport 25 -m set ! --match-set anti-ddos-email src -j ACCEPT
-A FORWARD -d 192.168.26.3/32 -p tcp -m tcp --dport 25 -m set --match-set anti-ddos-email src -j LOG --log-prefix "EMAIL-DDOS: " --log-level 6
-A FORWARD -d 192.168.26.3/32 -p tcp -m tcp --dport 25 -m set --match-set anti-ddos-email src -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 192.168.26.4/32 -p udp -m udp --dport 514 -m limit --limit 2/min -j SET --add-set anti-ddos-logging src
-A FORWARD -d 192.168.26.4/32 -p udp -m udp --dport 514 -m set ! --match-set anti-ddos-logging src -j ACCEPT
-A FORWARD -d 192.168.26.4/32 -p udp -m udp --dport 514 -m set --match-set anti-ddos-logging src -j LOG --log-prefix "LOG-DDOS: " --log-level 6
-A FORWARD -d 192.168.26.4/32 -p udp -m udp --dport 514 -m set --match-set anti-ddos-logging src -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j LOG --log-prefix "ETC-REJECT: " --log-level 6
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Wed Dec  2 15:05:40 2020
# Generated by iptables-save v1.8.4 on Wed Dec  2 15:05:40 2020
*security
:INPUT ACCEPT [57778:35250605]
:FORWARD ACCEPT [22:1848]
:OUTPUT ACCEPT [1630:145383]
COMMIT
# Completed on Wed Dec  2 15:05:40 2020
# Generated by iptables-save v1.8.4 on Wed Dec  2 15:05:40 2020
*raw
:PREROUTING ACCEPT [57820:35254729]
:OUTPUT ACCEPT [1630:145383]
COMMIT
# Completed on Wed Dec  2 15:05:40 2020
# Generated by iptables-save v1.8.4 on Wed Dec  2 15:05:40 2020
*mangle
:PREROUTING ACCEPT [57820:35254729]
:INPUT ACCEPT [57778:35250605]
:FORWARD ACCEPT [22:1848]
:OUTPUT ACCEPT [1630:145383]
:POSTROUTING ACCEPT [1652:147231]
COMMIT
# Completed on Wed Dec  2 15:05:40 2020
# Generated by iptables-save v1.8.4 on Wed Dec  2 15:05:40 2020
*nat
:PREROUTING ACCEPT [1:304]
:INPUT ACCEPT [1:304]
:POSTROUTING ACCEPT [1:40]
:OUTPUT ACCEPT [1:40]
COMMIT
# Completed on Wed Dec  2 15:05:40 2020
