cs2/172.16.3.1-iptables.txt
172.16.3.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Mon Dec  7 20:03:48 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1133:190237]
#Accepting established connection 
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
#Allow loopback interface
-A INPUT -i lo -j ACCEPT
#Drop invalid packages
-A INPUT -m conntrack --ctstate INVALID -j DROP
#Allowing icmp request new or established from known IFS network and my own network
-A INPUT -s 172.16.0.0/19 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.3.0/24 -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
#Allowing ssh connection from my network but also only allowing established ssh connection
-A INPUT -s 172.16.3.0/24 -p tcp -m tcp --dport 22 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.3.0/24 -p tcp -m tcp --dport 22 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
#Allowing ssh connection from 172.16.0.1 new or established
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
#Rejects connections from hosts that have more than 80 established connections.
-A INPUT -p tcp -m connlimit --connlimit-above 80 --connlimit-mask 32 --connlimit-saddr -j REJECT --reject-with tcp-reset
#Limit the new TCP connections that a client can establish per second
-A INPUT -p tcp -m conntrack --ctstate NEW -m limit --limit 60/sec --limit-burst 20 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -j DROP
#Limiting incoming TCP RST packets to mitigate TCP RST floods
-A INPUT -p tcp -m tcp --tcp-flags RST RST -m limit --limit 2/sec --limit-burst 2 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags RST RST -j DROP
#Drop ssh attempt if reach certain amount to prevent ssh bruteforce
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m recent --set --name DEFAULT --mask 255.255.255.255 --rsource 
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 10 --name DEFAULT --mask 255.255.255.255 --rsource -j DROP
#Reject based on protocol with different responds
-A INPUT -j LOG --log-prefix "INPUT:DROP:"
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
#Reject with unreachle as a general
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
#Reject forward with icmp-proto
-A FORWARD -j REJECT --reject-with icmp-proto-unreachable

COMMIT
# Completed on Mon Dec  7 20:03:48 2020
# Generated by iptables-save v1.8.4 on Mon Dec  7 20:03:48 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [117:15464]
:OUTPUT ACCEPT [117:15464]
#-A POSTROUTING -s 172.16.0.0/19 -o ens224 -j MASQUERADE
COMMIT
# Completed on Mon Dec  7 20:03:48 2020
# Generated by iptables-save v1.8.4 on Mon Dec  7 20:03:48 2020
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# Drop invalid packages
-A PREROUTING -m conntrack --ctstate INVALID -j DROP
# Block packets that use bogus TCP flags
-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A PREROUTING -p tcp -m conntrack --ctstate NEW -m tcpmss ! --mss 536:65535 -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
# Drop private subnet packages to prevent IP spoofing
-A PREROUTING -s 224.0.0.0/3 -j DROP
-A PREROUTING -s 169.254.0.0/16 -j DROP
-A PREROUTING -s 192.0.2.0/24 -j DROP
-A PREROUTING -s 10.0.0.0/8 -j DROP
-A PREROUTING -s 0.0.0.0/8 -j DROP
-A PREROUTING -s 240.0.0.0/5 -j DROP
-A PREROUTING -s 127.0.0.0/8 ! -i lo -j DROP
# Blocks fragmented packets
-A PREROUTING -f -j DROP
COMMIT
# Completed on Mon Dec  7 20:03:48 2020
