cs2/172.16.4.1-iptables.txt
172.16.4.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Sun Dec  6 22:12:35 2020
*security
:INPUT ACCEPT [34311:28438944]
:FORWARD ACCEPT [76047:16475286]
:OUTPUT ACCEPT [90724:5445291]
COMMIT
# Completed on Sun Dec  6 22:12:35 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 22:12:35 2020
*raw
:PREROUTING ACCEPT [6235174:1923535960]
:OUTPUT ACCEPT [90724:5445291]
COMMIT
# Completed on Sun Dec  6 22:12:35 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 22:12:35 2020
*mangle
:PREROUTING ACCEPT [6235174:1923535960]
:INPUT ACCEPT [6158156:1906969077]
:FORWARD ACCEPT [76274:16489214]
:OUTPUT ACCEPT [90724:5445291]
:POSTROUTING ACCEPT [166783:21921249]
COMMIT
# Completed on Sun Dec  6 22:12:35 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 22:12:35 2020
*nat
:PREROUTING ACCEPT [6154493:1880279089]
:INPUT ACCEPT [266:21762]
:POSTROUTING ACCEPT [93077:4617511]
:OUTPUT ACCEPT [63485:2961804]
COMMIT
# Completed on Sun Dec  6 22:12:35 2020
# Generated by iptables-save v1.8.4 on Sun Dec  6 22:12:35 2020
*filter
:INPUT DROP [12085:3710479]
:FORWARD DROP [216:13268]
:OUTPUT ACCEPT [90724:5445291]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -d 192.168.4.2/32 -i ens192 -p udp -m udp --dport 53 -m limit --limit 20/min --limit-burst 10 -j ACCEPT
-A FORWARD -d 192.168.4.53/32 -i ens192 -p udp -m udp --dport 53 -m limit --limit 20/min --limit-burst 10 -j ACCEPT
-A FORWARD -d 192.168.4.80/32 -i ens192 -p tcp -m tcp --dport 80 -m limit --limit 20/min --limit-burst 10 -j ACCEPT
-A FORWARD -d 192.168.4.25/32 -i ens192 -p tcp -m tcp --dport 25 -m limit --limit 10/min --limit-burst 10 -j ACCEPT
-A FORWARD -s 172.16.0.1/32 -d 192.168.4.2/32 -i ens192 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.16.0.1/32 -d 192.168.4.3/32 -i ens192 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 -j SET --add-set ssh_host_deny src
-A FORWARD -p tcp -m tcp --dport 22 -m set --match-set ssh_host_deny src -j DROP
-A FORWARD -i ens224 -o ens192 -j ACCEPT
-A FORWARD -j LOG --log-prefix "DROPPED FORWARDING TRAFFIC: "
COMMIT
# Completed on Sun Dec  6 22:12:35 2020
