cs2/172.16.5.1-iptables.txt
172.16.5.1 | CHANGED | rc=0 >>
# Generated by iptables-save v1.8.4 on Sun Dec  6 22:51:51 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [7770:1037469]
-A INPUT -d 192.168.5.3/32 -p tcp -m tcp --dport 25 -m limit --limit 2/hour --limit-burst 4 -j ACCEPT
-A INPUT -s 192.168.5.3/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 192.168.5.0/24 -p tcp -m tcp --sport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j LOG --log-prefix "this is a log"
-A INPUT -j DROP
-A FORWARD -s 192.168.5.3/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -d 192.168.5.3/32 -p tcp -m tcp --dport 25 -m limit --limit 2/hour --limit-burst 4 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -s 192.168.5.3/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A OUTPUT -s 172.16.5.1/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -s 192.168.5.1/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -s 192.168.5.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -s 192.168.5.1/32 -d 192.168.5.4/32 -p udp -m udp --dport 514 -m limit --limit 2/hour --limit-burst 4 -j ACCEPT
-A OUTPUT -j LOG
-A OUTPUT -j DROP
COMMIT
# Completed on Sun Dec  6 22:51:51 2020
