cs2/172.16.9.1-iptables.txt
172.16.9.1 | CHANGED | rc=0 >>
# sample configuration for iptables service
# you can edit this manually or use system-config-firewall
# please do not ask us to add additional ports/services to this default configuration
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.9.0/24 -p icmp -m limit --limit 2/minute --limit-burst 5 -j ACCEPT
-A FORWARD -s 192.168.9.0/24 -p icmp -m limit --limit 2/minute --limit-burst 5 -j ACCEPT
-A INPUT -p icmp -j LOG --log-prefix "ICMP-Dropped INPUT: "  
-A FORWARD -p icmp -j LOG --log-prefix "ICMP-Dropped FORWARD: " 
-A INPUT -p icmp -j REJECT
-A FORWARD -p icmp -j REJECT
-A INPUT -s 192.168.9.0/24 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 172.16.0.1 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.9.0/24 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --dport 22 -j LOG --log-prefix "SSH-Dropped INPUT: "
-A FORWARD -p tcp --dport 22 -j LOG --log-prefix "SSH-Dropped FORWARD: "
-A INPUT -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A INPUT -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 10 -j DROP
-A FORWARD -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A FORWARD -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 10 -j DROP
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j REJECT
-A FORWARD -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j REJECT
-A INPUT -p udp -m udp --dport 53 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p udp -m udp -s 192.168.9.0/24 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp -m tcp -s 192.168.9.0/24 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -m conntrack --ctstate NEW,ESTABLISHED -j REJECT
-A FORWARD -p tcp -m tcp --dport 53 -m conntrack --ctstate NEW,ESTABLISHED -j REJECT
-N ATTK_CHECK
-N ATTACKED
-A FORWARD -p tcp -m multiport --dports 80,443,25 -m recent --update --seconds 3600 --name BANNED
-A FORWARD -p tcp -m multiport --dports 80,443,25 -m state --state NEW -j ATTK_CHECK
-A FORWARD -p udp --dport 53 -m recent --update --seconds 3600 --name BANNED
-A FORWARD -p udp --dport 53 -m state --state NEW -j ATTK_CHECK
-A INPUT -p tcp -m multiport --dports 80,443,25 -m recent --update --seconds 3600 --name BANNED
-A INPUT -p tcp -m multiport --dports 80,443,25 -m state --state NEW -j ATTK_CHECK
-A INPUT -p udp --dport 53 -m recent --update --seconds 3600 --name BANNED
-A INPUT -p udp --dport 53 -m state --state NEW -j ATTK_CHECK
-A ATTACKED -m limit --limit 5/min -j LOG --log-prefix "IPTables (Rule ATTACKED): " 
-A ATTACKED -m recent --set --name BANNED --rsource -j DROP
-A ATTK_CHECK -m recent --set --name ATTK --rsource
-A ATTK_CHECK -m recent --update --seconds 600 --hitcount 150 --name ATTK --rsource -j ATTACKED
-A ATTK_CHECK -m recent --update --seconds 60 --hitcount 50 --name ATTK --rsource -j ATTACKED
-A ATTK_CHECK -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 25 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -p tcp ! --syn -m conntrack --ctstate NEW -j DROP
-A FORWARD -p tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A FORWARD -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A FORWARD -p tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A FORWARD -p tcp --tcp-flags FIN,ACK FIN -j DROP
-A FORWARD -p tcp --tcp-flags ACK,URG URG -j DROP
-A FORWARD -p tcp --tcp-flags ACK,PSH PSH -j DROP
-A FORWARD -p tcp --tcp-flags ALL NONE -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp ! --syn -m conntrack --ctstate NEW -j DROP
-A INPUT -p tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -p tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A INPUT -p tcp --tcp-flags FIN,ACK FIN -j DROP
-A INPUT -p tcp --tcp-flags ACK,URG URG -j DROP
-A INPUT -p tcp --tcp-flags ACK,PSH PSH -j DROP
-A INPUT -p tcp --tcp-flags ALL NONE -j DROP
-N port-scanning
-A port-scanning -p tcp --tcp-flags SYN,ACK,FIN,RST RST -m limit --limit 1/s --limit-burst 2 -j RETURN
-A port-scanning -j DROP
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
